feat: 🚀 complete swagger generator
